client: fix image cut-off
mentioned in #48, certain sizes of wide images get cut off at the right

--- a/client/main.less
+++ b/client/main.less
@@ -154,13 +154,16 @@ body {
 	background: @body-bg;
 	.hide-selection();
 
-	&>img,
-	&>video,
-	&>b {
-		max-height: 100%;
-		max-width : 100%;
-		margin    : auto auto;
-		object-fit: contain;
+	#media-container {
+		height: fit-content;
+		margin: auto;
+		&>img,
+		&>video,
+		&>b {
+			max-height: 100%;
+			max-width: 100%;
+			object-fit: contain;
+		}
 	}
 }
 
